force-app/main/default/objects/EZProtect4SF__EZProtectSystemLog__c/EZProtect4SF__EZProtectSystemLog__c.object-meta.xml
<CustomObject>
    <label>EZProtect System Log</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EZProtect System Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>