force-app/main/default/objects/EZProtect4SF__EZProtectSystemLog__c/fields/EZProtect4SF__Class__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__Class__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Class</label>
    <length>50</length>
    <type>Text</type>
</CustomField>