force-app/main/default/objects/EZProtect4SF__EZProtectSystemLog__c/fields/EZProtect4SF__LogDetail__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__LogDetail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Log Detail</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>