force-app/main/default/objects/EZProtect4SF__EZProtectSystemLog__c/fields/EZProtect4SF__LogType__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__LogType__c</fullName>
    <label>Log Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Info</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>