force-app/main/default/objects/EZProtect4SF__EZProtectSystemLog__c/fields/EZProtect4SF__Method__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__Method__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Method</label>
    <length>50</length>
    <type>Text</type>
</CustomField>